[tool.poetry]
name = "biztest"
version = "0.1.0"
description = "An application to run integration tests on Bizagi processes"
authors = ["André Carvalho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
